# battle-royale-moba-godot

./: .clang-format  .gitignore  .prettierignore  AGENTS.md  CONTEXT.md  Makefile  README.md  build.py  build_env.linux.example  build_env.macos.example  build_env.yaml.example  export_presets.cfg  godot-editor-todo.md  main.py  package.py  project.godot  prompt.md  pyproject.toml
Docs/: cpp_build_logic.md
Docs/Archive/: bottom_hud_design.md  camera_control_design.md  python_map_editor_design.md  skill_cast_error_fix.md
Docs/Reference/: bot_ai.md  bot_ai_optimization.md  godot-editor-todo.md  hero_skill_architecture.md  input_system_design.md  prompt.md  python_map_editor_design.md  right_click_movement_design.md  sim_system_reference.md  skill_system_design.md  targeted_attack_design.md
addons/battle_royale_sim/: battle_royale_sim.gdextension
addons/topdown_sim/: topdown_sim.gdextension
data/maps/: default.json
scenes/: main.tscn
scenes/entities/: arrow.tscn  bot.tscn  pickup_heal.tscn  pickup_small_heal.tscn  pickup_xp.tscn  player.tscn
scenes/ui/: bottom_hud.tscn  cast_bar.tscn  cast_error.tscn  health_bar_ui.tscn  item_slot_ui.tscn  settings_panel.tscn  skill_slot_ui.tscn
scripts/: format_sim.py  format_table.py  sim_bridge.gd
scripts/autoload/: game_settings.gd
scripts/input/: cast_settings.gd  command.gd  command_buffer.gd  command_builder.gd  input_collector.gd  input_event_queue.gd  input_state_machine.gd
scripts/ui/: bottom_hud.gd  cast_bar.gd  cast_error.gd  health_bar_manager.gd  health_bar_ui.gd  item_slot_ui.gd  settings_panel.gd  skill_slot_ui.gd  stats_panel.gd
scripts/view/: camera_controller.gd  entity_manager.gd  entity_view.gd  move_target_vfx.gd  skill_vfx.gd  skill_vfx_attachment.gd
src_cpp/: CMakeLists.txt  SConstruct  build_profile.json  register_types.cpp  register_types.h  sim_server.cpp  sim_server.h
src_cpp/sim/: arrow_spawner.h  command_buffer.h  components.h  game_config.h  json_util.h  nav_grid.h  skill_defs.h  snapshot_bindings.cpp  snapshot_builder.cpp  snapshot_builder.h  snapshot_types.h  vec2.h  world.cpp  world.h
src_cpp/sim/heroes/: hero_def.h  hero_registry.cpp  hero_registry.h
src_cpp/sim/skills/: aoe_field.h  channel_burst.h  dash.h  melee_strike.h  skill_interface.h  skill_registry.cpp  skill_registry.h
src_cpp/sim/systems/: aoe.h  arrow_movement.h  attack_command.h  attack_fire.h  bot_ai.h  bot_combat.h  bot_input_injection.h  bot_role_rules.h  bot_skill_decider.h  bot_targeting.h  combat.h  local_input_injection.h  mana_regen.h  movement.h  pathfinding.h  pickup.h  player_attack_command.h  player_attack_fire.h  player_fire.h  player_movement.h  player_pathfinding.h  progression.h  skill_cast.h  skill_cooldown.h  skill_input.h  skill_level.h  snapshot_export.h  status_effect.h  wall_collision.h  xp_helper.h
tools/: map_editor_config.example.yaml  map_editor_config.yaml  map_editor_help.txt
tools/map_editor/: __main__.py  commands.py  map_model.py  viewer.py  watcher.py
